--- a/core/package.json
+++ b/core/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "kiwi.js": "^1.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
