Rename and recolor cells.

--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,10 @@
     "homotopy-core": "0.1.0",
     "pixi.js": "^4.8.1",
     "react": "16.4.2",
+    "react-color": "^2.14.1",
     "react-dom": "16.4.2",
     "react-ionicons": "^2.1.6",
+    "react-picker": "^1.2.11",
     "react-redux": "^5.0.7",
     "react-spinkit": "^3.0.0",
     "react-streams": "^13.6.6",
