--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -3,7 +3,10 @@
     "browser": true,
     "es6": true
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -12,6 +15,7 @@
     "sourceType": "module"
   },
   "plugins": [
+    "react"
   ],
   "rules": {
     "indent": [
@@ -29,6 +33,14 @@
     "semi": [
       "error",
       "always"
-    ]
+    ],
+    "react/jsx-uses-vars": [2],
+    "react/prop-types": 0,
+    "react/display-name": 0
+  },
+  "settings": {
+    "react": {
+      "version": "16"
+    }
   }
 }
