--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react": "16.4.2",
     "react-color": "^2.14.1",
     "react-dom": "16.4.2",
+    "react-file-reader": "^1.1.4",
     "react-redux": "^5.0.7",
     "react-spinkit": "^3.0.0",
     "redux": "^4.0.0",
