--- a/client/package.json
+++ b/client/package.json
@@ -30,12 +30,14 @@
     "mda": "^1.1.1",
     "pako": "^1.0.7",
     "react": "16.4.2",
+    "react-collapsible": "^2.3.2",
     "react-color": "^2.14.1",
     "react-dom": "16.4.2",
     "react-file-reader": "^1.1.4",
     "react-redux": "^5.0.7",
     "react-spinkit": "^3.0.0",
     "redux": "^4.0.0",
+    "redux-form": "^8.1.0",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.2.2",
     "styled-components": "^3.4.5",
