implement login UI, and connect to firebase/firestore

--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@icon/stroke-7": "^1.2.0-2",
     "babel-polyfill": "^6.26.0",
     "dot-prop-immutable": "^1.4.0",
+    "firebase": "^5.7.1",
     "homotopy-core": "0.1.0",
     "hsluv": "^0.0.3",
     "mda": "^1.1.1",
@@ -34,10 +35,13 @@
     "react-color": "^2.14.1",
     "react-dom": "16.4.2",
     "react-file-reader": "^1.1.4",
+    "react-modal-login": "^1.3.1",
     "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.2.5",
     "react-spinkit": "^3.0.0",
     "redux": "^4.0.0",
     "redux-form": "^8.1.0",
+    "redux-firestore": "^0.6.1",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.2.2",
     "styled-components": "^3.4.5",
