--- a/client/package.json
+++ b/client/package.json
@@ -35,13 +35,15 @@
     "react-color": "^2.14.1",
     "react-dom": "16.4.2",
     "react-file-reader": "^1.1.4",
+    "react-modal": "^3.8.1",
     "react-modal-login": "^1.3.1",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.2.5",
     "react-spinkit": "^3.0.0",
     "redux": "^4.0.0",
-    "redux-form": "^8.1.0",
     "redux-firestore": "^0.6.1",
+    "redux-form": "^8.1.0",
+    "redux-loop": "^4.5.2",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.2.2",
     "styled-components": "^3.4.5",
