--- a/client/package.json
+++ b/client/package.json
@@ -41,9 +41,11 @@
     "react-redux-firebase": "^2.2.5",
     "react-spinkit": "^3.0.0",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.7",
     "redux-firestore": "^0.6.1",
     "redux-form": "^8.1.0",
     "redux-loop": "^4.5.2",
+    "redux-modal": "^3.0.1",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.2.2",
     "styled-components": "^3.4.5",
