--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "redux-form": "^8.1.0",
     "redux-loop": "^4.5.2",
     "redux-modal": "^3.0.1",
+    "redux-query-sync": "^0.1.7",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.2.2",
     "styled-components": "^3.4.5",
