large commit * new format for hash (URLON encoding of proof and metadata) * handle id query param with react-url-query replacing   redux-query-sync * handle history rather than setting up a window listener * cleaning up store and persistence   * clean up main App component * properly configure redux-devtools for production

--- a/client/package.json
+++ b/client/package.json
@@ -40,23 +40,25 @@
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.2.5",
     "react-spinkit": "^3.0.0",
+    "react-url-query": "^1.4.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.7",
     "redux-firestore": "^0.6.1",
     "redux-form": "^8.1.0",
     "redux-loop": "^4.5.2",
     "redux-modal": "^3.0.1",
-    "redux-query-sync": "^0.1.7",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.2.2",
     "styled-components": "^3.4.5",
     "svg-pan-zoom": "^3.5.3",
     "three": "^0.95.0",
     "three-orbit-controls": "^82.1.0",
-    "typeface-roboto": "^0.0.54"
+    "typeface-roboto": "^0.0.54",
+    "urlon": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
