--- a/client/.babelrc
+++ b/client/.babelrc
@@ -11,6 +11,7 @@
         }
       }
     ],
-    "@babel/proposal-object-rest-spread"
+    "@babel/proposal-object-rest-spread",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
