--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --mode development --inline --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "deploy": "npm run build && cp assets/index.html dist && firebase deploy"
   },
   "repository": {
     "type": "git",
@@ -68,6 +69,7 @@
     "eslint": "^5.4.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
+    "firebase-tools": "^6.2.2",
     "html-loader": "^0.5.5",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.0",
