--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --mode development --inline --hot",
-    "build": "webpack --mode production",
+    "build": "webpack --mode production --progress",
     "deploy": "npm run build && cp assets/index.html dist && firebase deploy"
   },
   "repository": {
