--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-color": "^2.14.1",
     "react-dom": "16.4.2",
     "react-file-reader": "^1.1.4",
+    "react-ga": "^2.5.6",
     "react-modal": "^3.8.1",
     "react-modal-login": "^1.3.1",
     "react-redux": "^5.0.7",
