--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/jamievicary/homotopy.io#readme",
   "dependencies": {
     "@icon/stroke-7": "^1.2.0-2",
+    "@material-ui/core": "^3.8.3",
     "babel-polyfill": "^6.26.0",
     "dot-prop-immutable": "^1.4.0",
     "firebase": "^5.7.1",
