--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --mode development --inline --hot",
-    "build": "webpack --mode production --progress",
+    "dev": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js --profile",
     "deploy": "npm run build && cp assets/index.html dist && firebase deploy"
   },
   "repository": {
@@ -67,17 +67,20 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.4.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "firebase-tools": "^6.2.2",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.0",
-    "webpack": "^4.17.1",
+    "webpack": "^4.28.4",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7",
+    "webpack-merge": "^4.2.1",
     "worker-loader": "^2.0.0"
   }
 }
