--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@icon/stroke-7": "^1.2.0-2",
     "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
     "babel-polyfill": "^6.26.0",
     "dot-prop-immutable": "^1.4.0",
     "firebase": "^5.7.1",
@@ -35,13 +36,11 @@
     "pako": "^1.0.7",
     "react": "16.4.2",
     "react-block-ui": "^1.1.3",
-    "react-collapsible": "^2.3.2",
     "react-color": "^2.14.1",
     "react-dom": "16.4.2",
     "react-file-reader": "^1.1.4",
     "react-firebaseui": "^3.1.2",
     "react-ga": "^2.5.6",
-    "react-modal": "^3.8.1",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.2.5",
     "react-spinkit": "^3.0.0",
