--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
     "babel-polyfill": "^6.26.0",
+    "copy-to-clipboard": "^3.0.8",
     "dot-prop-immutable": "^1.4.0",
     "firebase": "^5.7.1",
     "history": "^4.7.2",
