--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "copy-to-clipboard": "^3.0.8",
     "dot-prop-immutable": "^1.4.0",
     "firebase": "^5.7.1",
+    "glamor": "^2.20.40",
     "history": "^4.7.2",
     "homotopy-core": "0.1.0",
     "hsluv": "^0.0.3",
@@ -45,6 +46,7 @@
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.2.5",
     "react-spinkit": "^3.0.0",
+    "react-toastify": "^4.5.2",
     "react-url-query": "^1.4.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.7",
