--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config webpack.dev.js",
+    "_dev": "webpack-dev-server --config webpack.dev.js",
+    "dev": "node --max-old-space-size=8192 ../node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js --profile",
     "deploy": "npm run build && cp assets/index.html dist && firebase deploy"
   },
@@ -28,6 +29,7 @@
     "@material-ui/icons": "^3.0.2",
     "babel-polyfill": "^6.26.0",
     "copy-to-clipboard": "^3.0.8",
+    "dat.gui": "^0.7.5",
     "dot-prop-immutable": "^1.4.0",
     "firebase": "^5.7.1",
     "glamor": "^2.20.40",
