--- a/client/package.json
+++ b/client/package.json
@@ -24,68 +24,68 @@
   },
   "homepage": "https://github.com/jamievicary/homotopy.io#readme",
   "dependencies": {
-    "@icon/stroke-7": "^1.2.0-2",
-    "@material-ui/core": "^3.8.3",
-    "@material-ui/icons": "^3.0.2",
+    "@icon/stroke-7": "^1.2.0",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
     "babel-polyfill": "^6.26.0",
-    "copy-to-clipboard": "^3.0.8",
-    "dat.gui": "^0.7.5",
-    "dot-prop-immutable": "^1.4.0",
-    "firebase": "^5.7.1",
+    "copy-to-clipboard": "^3.2.0",
+    "dat.gui": "^0.7.6",
+    "dot-prop-immutable": "^1.5.0",
+    "firebase": "^6.2.4",
     "glamor": "^2.20.40",
-    "history": "^4.7.2",
+    "history": "^4.9.0",
     "homotopy-core": "0.1.0",
     "hsluv": "^0.0.3",
     "mda": "^1.1.1",
-    "pako": "^1.0.7",
-    "react": "16.4.2",
-    "react-block-ui": "^1.1.3",
-    "react-color": "^2.14.1",
-    "react-dom": "16.4.2",
+    "pako": "^1.0.10",
+    "react": "16.8.6",
+    "react-block-ui": "^1.1.4",
+    "react-color": "^2.17.3",
+    "react-dom": "16.8.6",
     "react-file-reader": "^1.1.4",
     "react-firebaseui": "^3.1.2",
-    "react-ga": "^2.5.6",
-    "react-redux": "^5.0.7",
-    "react-redux-firebase": "^2.2.5",
+    "react-ga": "^2.6.0",
+    "react-redux": "^7.1.0",
+    "react-redux-firebase": "^3.0.0-alpha.12",
     "react-spinkit": "^3.0.0",
-    "react-toastify": "^4.5.2",
+    "react-toastify": "^5.3.1",
     "react-url-query": "^1.4.0",
-    "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.7",
-    "redux-firestore": "^0.6.1",
-    "redux-form": "^8.1.0",
-    "redux-loop": "^4.5.2",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-firestore": "^0.8.0",
+    "redux-form": "^8.2.4",
+    "redux-loop": "^5.0.0",
     "redux-modal": "^3.0.1",
-    "resize-observer-polyfill": "^1.5.0",
-    "rxjs": "^6.2.2",
-    "styled-components": "^3.4.5",
-    "svg-pan-zoom": "^3.5.3",
-    "three": "^0.95.0",
+    "resize-observer-polyfill": "^1.5.1",
+    "rxjs": "^6.5.2",
+    "styled-components": "^4.3.2",
+    "svg-pan-zoom": "^3.6.0",
+    "three": "^0.106.2",
     "three-orbit-controls": "^82.1.0",
     "three-trackballcontrols": "0.0.8",
     "typeface-roboto": "^0.0.54",
     "urlon": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "clean-webpack-plugin": "^1.0.0",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.4.0",
-    "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^2.0.0",
-    "firebase-tools": "^6.5.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-react": "^7.14.2",
+    "file-loader": "^4.0.0",
+    "firebase-tools": "^7.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.0",
-    "webpack": "^4.28.4",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1",
     "worker-loader": "^2.0.0"
   }
