--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,9 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-admin": "~8.2.0",
+    "firebase-functions": "^3.1.0",
+    "npm-check-updates": "^3.1.18"
   },
   "private": true
 }
