--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,17 +6,17 @@ jobs:
     executor: node/default
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - dependencies-{{ checksum "package-lock.json" }}
-            - dependencies-
+      # - restore_cache:
+      #     keys:
+      #       - dependencies-{{ checksum "package-lock.json" }}
+      #       - dependencies-
       - run:
           name: Install dependencies
           command: npm install
-      - save_cache:
-          key: dependencies-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
+      # - save_cache:
+      #     key: dependencies-{{ checksum "package-lock.json" }}
+      #     paths:
+      #       - node_modules
       - run:
           name: Pull submodules
           command: |
