--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,13 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - dependencies-{{ checksum "package-lock.json" }}
-            - dependencies-
+            - npm-deps-{{ checksum "package-lock.json" }}
+            - npm-deps-
       - run:
           name: Install dependencies
           command: npm install
       - save_cache:
-          key: dependencies-{{ checksum "package-lock.json" }}
+          key: npm-deps-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
       - run:
