--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "pako": "^1.0.10",
     "react": "16.8.6",
     "react-block-ui": "^1.1.4",
-    "react-color": "^2.17.3",
+    "react-color": "2.17.0",
     "react-dom": "16.8.6",
     "react-file-reader": "^1.1.4",
     "react-firebaseui": "^3.1.2",
