--- a/package.json
+++ b/package.json
@@ -25,41 +25,42 @@
   "homepage": "https://github.com/homotopy-io/homotopy-webclient#readme",
   "dependencies": {
     "@icon/stroke-7": "^1.2.0",
-    "@material-ui/core": "^4.2.0",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
+    "@msgpack/msgpack": "^1.12.2",
     "babel-polyfill": "^6.26.0",
-    "copy-to-clipboard": "^3.2.0",
-    "dat.gui": "^0.7.6",
-    "dot-prop-immutable": "^1.5.0",
-    "firebase": "^6.2.4",
+    "copy-to-clipboard": "^3.3.1",
+    "dat.gui": "^0.7.7",
+    "dot-prop-immutable": "^1.6.0",
+    "firebase": "^6.6.2",
     "glamor": "^2.20.40",
-    "history": "^4.9.0",
+    "history": "^4.10.1",
     "homotopy-core": "file:homotopy-core",
     "hsluv": "^0.0.3",
     "mda": "^1.1.1",
-    "pako": "^1.0.10",
+    "pako": "^1.0.11",
     "react": "16.8.6",
-    "react-block-ui": "^1.1.4",
+    "react-block-ui": "^1.3.3",
     "react-color": "2.17.0",
     "react-dom": "16.8.6",
     "react-file-reader": "^1.1.4",
     "react-firebaseui": "^3.1.2",
-    "react-ga": "^2.6.0",
-    "react-redux": "^7.1.0",
-    "react-redux-firebase": "^3.0.0-alpha.12",
+    "react-ga": "^2.7.0",
+    "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.5.1",
     "react-spinkit": "^3.0.0",
-    "react-toastify": "^5.3.1",
-    "react-url-query": "^1.4.0",
-    "redux": "^4.0.4",
+    "react-toastify": "^5.5.0",
+    "react-url-query": "^1.5.0",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-firestore": "^0.8.0",
-    "redux-form": "^8.2.4",
-    "redux-loop": "^5.0.0",
-    "redux-modal": "^3.0.1",
+    "redux-form": "^8.3.6",
+    "redux-loop": "^5.1.1",
+    "redux-modal": "^3.0.2",
     "resize-observer-polyfill": "^1.5.1",
-    "rxjs": "^6.5.2",
-    "styled-components": "^4.3.2",
-    "svg-pan-zoom": "^3.6.0",
+    "rxjs": "^6.5.5",
+    "styled-components": "^4.4.1",
+    "svg-pan-zoom": "^3.6.1",
     "three": "^0.106.2",
     "three-orbit-controls": "^82.1.0",
     "three-trackballcontrols": "0.0.8",
@@ -67,26 +68,26 @@
     "urlon": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.0.0",
-    "eslint": "^6.0.1",
-    "eslint-plugin-react": "^7.14.2",
-    "file-loader": "^4.0.0",
-    "firebase-tools": "^7.0.2",
+    "css-loader": "^3.5.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.20.0",
+    "file-loader": "^4.3.0",
+    "firebase-tools": "^7.16.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2",
     "worker-loader": "^2.0.0"
   }
 }
