--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,9 @@ jobs:
           name: Deploy to firebase
           command: ../node_modules/.bin/firebase deploy --token $FIREBASE_DEPLOY_TOKEN
 workflows:
+  build-only:
+    jobs:
+      - build
   build-and-deploy:
     jobs:
       - build
