--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@msgpack/msgpack": "^1.12.2",
     "babel-polyfill": "^6.26.0",
     "copy-to-clipboard": "^3.3.1",
+    "copy-webpack-plugin": "^6.4.1",
     "dat.gui": "^0.7.7",
     "dot-prop-immutable": "^1.6.0",
     "firebase": "^8.9.1",
